--- a/Mira.html
+++ b/Mira.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="Mira.js"></script>
     <style>
         body {
-            background: black;
+            background: white;
         }
 
         #navigationbar a {
