--- a/Mira.html
+++ b/Mira.html
@@ -28,9 +28,9 @@
         }
 
 
-        #div1, #div2, #div3, #div4, #div5, #div6, #div7, #div8, #div9, #div10, #div11, #div12, #div13, #div14, #div15, #div16, #div17, #div18, #div19, #div20, #div21, #div22, #div23, #div23,
-        #div24, #div25, #div26, #div27, #div28, #div29, #div30, #div31, #div32, #div33, #div34, #div35, #div36, #div37, #div38, #div39, #div40, #div41, #div42, #div43, #div44, #div45, #div46, 
-	#div47, #div48, #div49, #div50, #div51, #div52, #div53, #div54, #div55, #div56, #div57, #div58, #div59, #div60, #div61, #div62, #div63, #div64, #div65, #div66 {
+        #grid1, #grid2, #grid3, #grid4, #grid5, #grid6, #grid7, #grid8, #grid9, #grid10, #grid11, #grid12, #grid13, #grid14, #grid15, #grid16, #grid17, #grid18, #grid19, #grid20, #grid21, #grid22, #grid23, #grid23,
+        #grid24, #grid25, #grid26, #grid27, #grid28, #grid29, #grid30, #grid31, #grid32, #grid33, #grid34, #grid35, #grid36, #grid37, #grid38, #grid39, #grid40, #grid41, #grid42, #grid43, #grid44, #grid45, #grid46, 
+	#grid47, #grid48, #grid49, #grid50, #grid51, #grid52, #grid53, #grid54, #grid55, #grid56, #grid57, #grid58, #grid59, #grid60, #grid61, #grid62, #grid63, #grid64, #grid65, #grid66 {
             position: relative;
             height: 150px;
             width: 150px;
@@ -140,28 +140,35 @@
 
             <ul>
                 <li><input type="button" value="Reset" onClick="location.href=location.href"></li>
-                <li> <img id="drag1" src="https://source.unsplash.com/random/150x150" draggable="true" ondragstart="drag(event)" width="150" height="150"></li>
-                <li> <img id="drag5" src="https://picsum.photos/200/300/?random" draggable="true" ondragstart="drag(event)" width="150" height="150"></li>
+
+                <li> <img id="picture1" src="https://source.unsplash.com/random/150x150" draggable="true" ondragstart="drag(event)" width="150" height="150"></li>
+
+                <li> <img id="picture2" src="https://picsum.photos/200/300/?random" draggable="true" ondragstart="drag(event)" width="150" height="150"></li>
+
                 <li>
                     <div id="clockcontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
                         <iframe id="clock" src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=medium&timezone=America%2FNew_York" scrolling='no' height=200 width=250 frameborder="0" seamless></iframe>
                     </div>
                 </li>
+
                 <li>
                     <div id="youtubecontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
-                        <iframe id="youtube" src="https://www.youtube.com/embed/y1yFiotx3qk" width="250" height="200" frameborder="0" draggable="true"></iframe>
+                        <iframe id="youtube" src="https://www.youtube.com/embed/y1yFiotx3qk" width="250" height="200" frameborder="0"></iframe>
                     </div>
                 </li>
+
                 <li>
                     <div id="calendarcontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
                         <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=200&amp;wkst=1&amp;bgcolor=%23666666&amp;src=pefjc031%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="250" height="300" scrolling="no" frameborder="0"></iframe>
                     </div>
                 </li>
+
                 <li>
                     <div id="notepadcontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
                         <iframe src="https://docs.google.com/document/d/e/2PACX-1vTbbZ9Rcqsb4B4ymU7n0oMcfrRXLfY8ic7hrxDyYdnbGNSnWUsaI-PbmUixfscd0kXBqHj8VeUeQZho/pub?embedded=true" width="250" height="300" scrolling="no" frameborder="0"></iframe>
                     </div>
                 </li>
+
                 <li>
                     <div id="weathercontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
                         <script type='text/javascript' src='https://darksky.net/widget/default-small/42.360082,-71.05888/us12/en.js?width=100%&height=70&title=Full Forecast&textColor=b9b9b9&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us'></script>
@@ -172,72 +179,72 @@
 
     </div>
 
-    <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div7" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div10" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div11" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div12" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div13" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div14" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div15" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div16" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div17" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div18" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div19" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div20" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div21" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div22" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div23" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div24" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div25" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div26" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div27" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div28" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div29" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div30" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div31" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div32" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div33" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div34" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div35" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div36" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div37" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div38" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div39" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div40" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div41" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div42" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div43" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div44" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div45" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div46" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div47" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div48" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div49" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div50" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div51" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div52" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div53" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div54" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div55" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div56" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div57" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div58" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div59" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div60" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div61" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div62" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div63" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div64" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div65" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="div66" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid7" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid10" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid11" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid12" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid13" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid14" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid15" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid16" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid17" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid18" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid19" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid20" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid21" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid22" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid23" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid24" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid25" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid26" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid27" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid28" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid29" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid30" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid31" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid32" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid33" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid34" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid35" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid36" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid37" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid38" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid39" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid40" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid41" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid42" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid43" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid44" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid45" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid46" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid47" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid48" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid49" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid50" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid51" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid52" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid53" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid54" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid55" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid56" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid57" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid58" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid59" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid60" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid61" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid62" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid63" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid64" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid65" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid66" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
 </body>
 </html>
