added a grid class, and applied it to all the grid divs. oh and also changed size of youtube player
title

--- a/Mira.html
+++ b/Mira.html
@@ -8,6 +8,18 @@
             background: black;
         }
 
+        /*#grid1, #grid2, #grid3, #grid4, #grid5, #grid6, #grid7, #grid8, #grid9, #grid10, #grid11, #grid12, #grid13, #grid14, #grid15, #grid16, #grid17, #grid18, #grid19, #grid20, #grid21, #grid22, #grid23, #grid23,
+        #grid24, #grid25, #grid26, #grid27, #grid28, #grid29, #grid30, #grid31, #grid32, #grid33, #grid34, #grid35, #grid36, #grid37, #grid38, #grid39, #grid40, #grid41, #grid42, #grid43, #grid44, #grid45, #grid46, 
+	#grid47, #grid48, #grid49, #grid50, #grid51, #grid52, #grid53, #grid54, #grid55, #grid56, #grid57, #grid58, #grid59, #grid60, #grid61, #grid62, #grid63, #grid64, #grid65, #grid66*/ 
+        .grid {
+            position: relative;
+            height: 150px;
+            width: 150px;
+            border: 1px clear;
+            float: right;
+            top: 5px;
+        }
+
         #navigationbar a {
             position: absolute;
             left: -395px;
@@ -25,18 +37,6 @@
 
         #navigationbar a:hover {
             left: 0;
-        }
-
-
-        #grid1, #grid2, #grid3, #grid4, #grid5, #grid6, #grid7, #grid8, #grid9, #grid10, #grid11, #grid12, #grid13, #grid14, #grid15, #grid16, #grid17, #grid18, #grid19, #grid20, #grid21, #grid22, #grid23, #grid23,
-        #grid24, #grid25, #grid26, #grid27, #grid28, #grid29, #grid30, #grid31, #grid32, #grid33, #grid34, #grid35, #grid36, #grid37, #grid38, #grid39, #grid40, #grid41, #grid42, #grid43, #grid44, #grid45, #grid46, 
-	#grid47, #grid48, #grid49, #grid50, #grid51, #grid52, #grid53, #grid54, #grid55, #grid56, #grid57, #grid58, #grid59, #grid60, #grid61, #grid62, #grid63, #grid64, #grid65, #grid66 {
-            position: relative;
-            height: 150px;
-            width: 150px;
-            border: 1px clear;
-            float: right;
-            top: 5px;
         }
 
         #clockcontainer {
@@ -153,7 +153,7 @@
 
                 <li>
                     <div id="youtubecontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
-                        <iframe id="youtube" src="https://www.youtube.com/embed/y1yFiotx3qk" width="250" height="200" frameborder="0"></iframe>
+                        <iframe id="youtube" src="https://www.youtube.com/embed/y1yFiotx3qk" width="300" height="300" frameborder="0"></iframe>
                     </div>
                 </li>
 
@@ -179,72 +179,72 @@
 
     </div>
 
-    <div id="grid1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid7" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid10" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid11" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid12" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid13" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid14" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid15" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid16" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid17" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid18" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid19" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid20" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid21" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid22" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid23" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid24" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid25" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid26" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid27" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid28" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid29" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid30" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid31" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid32" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid33" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid34" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid35" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid36" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid37" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid38" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid39" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid40" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid41" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid42" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid43" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid44" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid45" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid46" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid47" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid48" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid49" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid50" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid51" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid52" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid53" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid54" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid55" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid56" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid57" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid58" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid59" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid60" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid61" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid62" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid63" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid64" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid65" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid66" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid1" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid2" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid3" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid4" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid5" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid6" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid7" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid8" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid9" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid10" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid11" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid12" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid13" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid14" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid15" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid16" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid17" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid18" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid19" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid20" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid21" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid22" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid23" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid24" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid25" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid26" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid27" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid28" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid29" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid30" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid31" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid32" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid33" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid34" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid35" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid36" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid37" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid38" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid39" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid40" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid41" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid42" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid43" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid44" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid45" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid46" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid47" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid48" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid49" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid50" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid51" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid52" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid53" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid54" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid55" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid56" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid57" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid58" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid59" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid60" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid61" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid62" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid63" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid64" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid65" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="grid66" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
 </body>
 </html>
