changed widget type from a to div, also reverted youtube player size

--- a/Mira.html
+++ b/Mira.html
@@ -8,7 +8,7 @@
 <body>
 
     <div id="navigationbar">
-        <a id="widget">
+        <div id="widget">
 
             <ul>
                 <li><input type="button" value="Reset" onClick="location.href=location.href"></li>
@@ -25,7 +25,7 @@
 
                 <li>
                     <div id="youtubecontainer" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
-                        <iframe id="youtube" src="https://www.youtube.com/embed/y1yFiotx3qk" width="300" height="300" frameborder="0"></iframe>
+                        <iframe id="youtube" src="https://www.youtube.com/embed/y1yFiotx3qk" width="250" height="200" frameborder="0"></iframe>
                     </div>
                 </li>
 
@@ -47,8 +47,8 @@
                     </div>
                 </li>
             </ul>
-        </a>
 
+        </div> <!--End widget div-->
     </div> <!--End navigation bar div-->
 
     <!-- Declaring all 66 individual grid divs -->
