fixed annoying widget bar hover bug
-gave the widget bar a z-index of 2 and the grid boxes a z-index of 1
-fixed some pixel formatting with the grid boxes and the widget bar
-enclosed all the grid boxes under an empty div named gridcontainer

--- a/Mira.html
+++ b/Mira.html
@@ -50,74 +50,75 @@
 
         </div> <!--End widget div-->
     </div> <!--End navigation bar div-->
-
     <!-- Declaring all 66 individual grid divs -->
-    <div id="grid1" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid2" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid3" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid4" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid5" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid6" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid7" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid8" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid9" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid10" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid11" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid12" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid13" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid14" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid15" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid16" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid17" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid18" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid19" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid20" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid21" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid22" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid23" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid24" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid25" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid26" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid27" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid28" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid29" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid30" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid31" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid32" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid33" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid34" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid35" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid36" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid37" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid38" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid39" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid40" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid41" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid42" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid43" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid44" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid45" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid46" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid47" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid48" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid49" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid50" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid51" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid52" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid53" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid54" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid55" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid56" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid57" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid58" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid59" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid60" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid61" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid62" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid63" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid64" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid65" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    <div id="grid66" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div id="gridcontainer">
+        <div id="grid1" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid2" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid3" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid4" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid5" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid6" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid7" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid8" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid9" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid10" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid11" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid12" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid13" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid14" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid15" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid16" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid17" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid18" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid19" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid20" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid21" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid22" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid23" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid24" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid25" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid26" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid27" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid28" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid29" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid30" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid31" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid32" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid33" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid34" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid35" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid36" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid37" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid38" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid39" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid40" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid41" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid42" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid43" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid44" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid45" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid46" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid47" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid48" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid49" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid50" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid51" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid52" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid53" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid54" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid55" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid56" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid57" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid58" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid59" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid60" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid61" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid62" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid63" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid64" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid65" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="grid66" class="grid" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    </div>
 
 </body>
 </html>
